--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring-stream-backend
 spring.datasource.url=jdbc:mysql://localhost:3306/streaming
 spring.datasource.username=root
-#spring.datasource.password=pratyush6653@ (Personal System)
-spring.datasource.password=Pratyush6653@
+spring.datasource.password=pratyush6653@
+# spring.datasource.password=Pratyush6653@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
