--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9000
 spring.application.name=spring-stream-backend
 spring.datasource.url=jdbc:mysql://localhost:3306/streaming
 spring.datasource.username=root
